--- a/Android/WMessage/myapplication/build.gradle
+++ b/Android/WMessage/myapplication/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "24.0.0"
 
     defaultConfig {
@@ -21,9 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:2.0.0-alpha2'
     compile 'com.google.android.gms:play-services-wearable:9.2.1'
-    compile 'com.google.android.support:wearable:1.4.0'
-    compile 'com.android.support:support-v4:24.0.0'
 }
