--- a/Android/Fragment/app/src/main/AndroidManifest.xml
+++ b/Android/Fragment/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity2"/>
+        <activity android:name=".MainActivity3"/>
+        <activity android:name=".MainActivity4">
+        </activity>
     </application>
 
 </manifest>
