update WMessage,add Handler

--- a/Android/PhoneMessage/app/src/main/AndroidManifest.xml
+++ b/Android/PhoneMessage/app/src/main/AndroidManifest.xml
@@ -18,12 +18,13 @@
         <activity android:name=".MessageSend"/>
         <activity android:name=".Binding"/>
         <activity android:name=".MessageEdit"/>
+        <receiver android:name=".MessageReceiver">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+            </intent-filter>
+        </receiver>
     </application>
-    <receiver android:name=".smsReceiver">
-        <intent-filter>
-            <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
-        </intent-filter>
-    </receiver>
+
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
